# virtues-dimens

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  PRESENTATION.md  PRESENTATION.pt-BR.md  PROMPT_ANDROID.md  PROMPT_IOS.md  README.md  README.pt-BR.md  SECURITY.md  VERSION_UPDATE_SUMMARY.md
Android/: BENCHMARK-pt-BR.md  BENCHMARK.md  PROMPT_FOR_IA.md  README.md  README.pt-BR.md  settings.gradle.kts
Android/DOCS/DYNAMIC/MARKDOWN/: index.md
Android/app/: build.gradle.kts
Android/virtues_all/: README.md  README.pt-BR.md  build.gradle.kts  pom.xml
Android/virtues_dynamic/: README.md  README.pt-BR.md  build.gradle.kts  pom.xml
Android/virtues_games/: IMPLEMENTATION_SUMMARY.md  README.md  build.gradle.kts  consumer-rules.pro  pom.xml  proguard-rules.pro
Android/virtues_games/src/main/cpp/: CMakeLists.txt
Android/virtues_games/src/main/cpp/include/: AppDimensGames.h  GameDimensions.h  GameMath.h  GameScaling.h  OpenGLUtils.h  PerformanceMonitor.h  ViewportManager.h
Android/virtues_games/src/main/cpp/src/: AppDimensGames.cpp  GameDimensions.cpp  GameMath.cpp  GameScaling.cpp  OpenGLUtils.cpp  PerformanceMonitor.cpp  ViewportManager.cpp
Android/virtues_library/: build.gradle.kts  pom.xml
Android/virtues_sdps/: README.md  README.pt-BR.md  build.gradle.kts  pom.xml
Android/virtues_ssps/: README.md  README.pt-BR.md  build.gradle.kts  pom.xml
iOS/: AppDimens.podspec  CHANGELOG.md  DOCUMENTATION.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INSTRUCTIONS.md  MODULAR_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_MODULAR.md  TEST_RESULTS.md  USAGE_GUIDE.md
iOS/AppDimens.xcodeproj/: project.pbxproj
iOS/Examples/: ImprovedSwiftUIExample.swift  MetalGameExample.swift  SwiftUIExample.swift  UIKitExample.swift
iOS/Sources/VirtuesDimens/: AppDimens.swift  AppDimensAdjustmentFactors.swift  AppDimensDynamic.swift  AppDimensExtensions.swift  AppDimensFixedCalculator.swift  AppDimensItemCalculator.swift  AppDimensPhysicalUnits.swift  AppDimensProtocols.swift
(+1015 files in other folders)
